[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/itens/SolBom.gd" type="Script" id=1]
[ext_resource path="res://sprites/solbom.png" type="Texture" id=2]
[ext_resource path="res://sounds/item bom (1).wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.5, 44.5 )

[node name="GoodSun" type="Area2D"]
position = Vector2( 0, -5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -36.5, -32.5 )
shape = SubResource( 1 )

[node name="GoodSun" type="Sprite" parent="."]
position = Vector2( -41.5, -26.5485 )
scale = Vector2( 0.396774, 0.365322 )
texture = ExtResource( 2 )

[node name="CollectedSoundGood" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_GoodSun_body_entered"]
